Fixed CSS overflow-bug.

--- a/07-chat/frontend/src/assets/scss/_layout.scss
+++ b/07-chat/frontend/src/assets/scss/_layout.scss
@@ -32,6 +32,7 @@
 		flex-direction: column;
 		flex-grow: 1;
 		border-right: 1px solid #555;
+		overflow-y: scroll;
 
 		h2 {
 			background-color: $heading-bg-color;
